@@ -1,3 +1,8 @@
+2014-03-13  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* install.el (install-prefix): Handle new installing method on
+	MS-Windows.
+
 2014-02-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* pces-20.el (insert-file-contents-as-raw-text)
